--- a/index.html
+++ b/index.html
@@ -33,55 +33,57 @@
 </head>
 <body>
 	<div class="ts-container" id="app">
-		<br>
-		<h1 class="ts-header is-big is-center-aligned">Henry 的海底撈黑海會員之路</h1>
-		<br>
-		<div class="ts-progress is-small">
-			<div class="bar" :style="{ '--value': point / 10000 * 100 }">
-				<div class="text">{{ point | num }}</div>
-			</div>
-		</div>
-		<div class="ts-grid progress-levels">
-			<div class="column" v-for="level in levels" v-if="level.point != 0"
-			:style="{ width: level.point == 10000 ? 'auto' : (level.point / 10000 * 100) + '%' }"
-			:class="{ 'is-fluid': level.point == 10000 }"
-			>
-				{{ level.name }}
-				<small>{{ level.point | num }}</small>
-			</div>
-		</div>
-		<br>
-		<div class="ts-box">
-			<div class="ts-content">
-				<div class="ts-text">距離黑海會員還需要</div>
-				<div class="ts-header is-large">{{ 10000 - point | num }} 積分
-					<small>( $ {{ (10000 - point)*5 }} ) </small>
+		<div class="ts-wrap is-vertical has-vertically-spaced-large">
+			<h1 class="ts-header is-big is-center-aligned">Henry 的海底撈黑海會員之路</h1>
+			<div>
+				<div class="ts-progress is-small">
+					<div class="bar" :style="{ '--value': point / target * 100 }">
+						<div class="text">{{ point | num }}</div>
+					</div>
+				</div>
+				<div class="ts-grid progress-levels">
+					<div class="column" v-for="level in levels" v-if="level.point != 0"
+					:style="{ width: level.point >= target ? 'auto' : (level.add_point / target * 100) + '%' }"
+					:class="{ 'is-fluid': level.point >= target }"
+					>
+						{{ level.name }}
+						<small>
+							{{ level.point | num }}
+							<span v-if="level.point <= point" class="ts-icon is-circle-check-icon"></span>
+						</small>
+					</div>
 				</div>
 			</div>
-			<div class="symbol"><span class="ts-icon is-trophy-icon"></span></div>
+			<div class="ts-box" v-if="point < target">
+				<div class="ts-content">
+					<div class="ts-text">距離黑海會員還需要</div>
+					<div class="ts-header is-large">{{ target - point | num }} 積分
+						<small>( $ {{ (target - point)*5 }} )</small>
+					</div>
+				</div>
+				<div class="symbol"><span class="ts-icon is-trophy-icon"></span></div>
+			</div>
+			<div class="ts-box">
+				<table class="ts-table is-small">
+					<thead>
+						<tr>
+							<th>日期</th>
+							<th>花費金額</th>
+							<th>獲得積分</th>
+							<th>累積積分</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr v-for="log in logs">
+							<td>{{ log.day }}</td>
+							<td>$ {{ (log.point*5) | num }}</td>
+							<td>{{ log.point | num }}</td>
+							<td>{{ log.total_point | num }}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
-		<br>
-		<div class="ts-box">
-			<table class="ts-table">
-				<thead>
-					<tr>
-						<th>日期</th>
-						<th>花費金額</th>
-						<th>獲得積分</th>
-						<th>累積積分</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr v-for="log in logs">
-						<td>{{ log.day }}</td>
-						<td>$ {{ (log.point*5) | num }}</td>
-						<td>{{ log.point | num }}</td>
-						<td>{{ log.total_point | num }}</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<br>
 	</div>
 	<script>
 		new Vue({
@@ -94,21 +96,24 @@
 					{ name: '黑海', point: 10000 },
 				],
 				logs: [
-					{"day": "2025/1/5", "point": 682},
-					{"day": "2024/12/25", "point": 757},
-					{"day": "2024/12/8", "point": 730},
-					{"day": "2024/12/4", "point": 520},
-					{"day": "2024/11/20", "point": 1231},
-					{"day": "2024/10/20", "point": 763},
-					{"day": "2024/9/12", "point": 1099},
-					{"day": "2024/7/30", "point": 1206},
-					{"day": "2024/7/21", "point": 468},
-					{"day": "2024/4/17", "point": 699}
+					{day: "2025/1/5", point: 682},
+					{day: "2024/12/25", point: 757},
+					{day: "2024/12/8", point: 730},
+					{day: "2024/12/4", point: 520},
+					{day: "2024/11/20", point: 1231},
+					{day: "2024/10/20", point: 763},
+					{day: "2024/9/12", point: 1099},
+					{day: "2024/7/30", point: 1206},
+					{day: "2024/7/21", point: 468},
+					{day: "2024/4/17", point: 699}
 				]
 			},
 			computed: {
 				point() {
-					return Math.min(10000, this.logs.reduce((acc, log) => acc + log.point, 0));
+					return this.logs.reduce((acc, log) => acc + log.point, 0);
+				},
+				target() {
+					return Math.max(...this.levels.map(level => level.point));
 				}
 			},
 			filters: {
@@ -120,6 +125,9 @@
 				this.logs.sort((a, b) => new Date(b.day) - new Date(a.day));
 				for (let i = this.logs.length - 1; i >= 0; i--) {
 					this.logs[i].total_point = parseInt(this.logs.slice(i).reduce((acc, log) => acc + log.point, 0));
+				}
+				for (let i = 1; i < this.levels.length; i++) {
+					this.levels[i].add_point = Math.max(0, this.levels[i].point - this.levels[i - 1].point);
 				}
 			}
 		});
