--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</style>
 </head>
 <body>
-	<div class="ts-container" id="app">
+	<div class="ts-container is-narrow" id="app">
 		<div class="ts-wrap is-vertical has-vertically-spaced-large is-relaxed">
 			<h1 class="ts-header is-big is-center-aligned">Henry 的海底撈黑海會員之路</h1>
 			<div>
@@ -96,16 +96,17 @@
 					{ name: '黑海', point: 10000 },
 				],
 				logs: [
-					{day: "2025/1/5", point: 682},
-					{day: "2024/12/25", point: 757},
-					{day: "2024/12/8", point: 730},
-					{day: "2024/12/4", point: 520},
-					{day: "2024/11/20", point: 1231},
-					{day: "2024/10/20", point: 763},
-					{day: "2024/9/12", point: 1099},
-					{day: "2024/7/30", point: 1206},
-					{day: "2024/7/21", point: 468},
-					{day: "2024/4/17", point: 699}
+					{ day: '2025/1/6', point: 176 },
+					{ day: '2025/1/5', point: 682 },
+					{ day: '2024/12/25', point: 757 },
+					{ day: '2024/12/8', point: 730 },
+					{ day: '2024/12/4', point: 520 },
+					{ day: '2024/11/20', point: 1231 },
+					{ day: '2024/10/20', point: 763 },
+					{ day: '2024/9/12', point: 1099 },
+					{ day: '2024/7/30', point: 1206 },
+					{ day: '2024/7/21', point: 468 },
+					{ day: '2024/4/17', point: 699 }
 				]
 			},
 			computed: {
